# valve

./: .env.example  .gitignore  LICENSE  Makefile  NOTES.md  README.md  example.py  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: index.md
docs/notebooks/: intro-to-valve.ipynb
src/valve/: cli.py
src/valve/assets/pipelines/: clarity.json  pipeline-update.yaml
src/valve/clients/: auth.py  base.py  oauth.py  users.py
src/valve/core/: api.py  auth.py  base_client.py  http_client_factory.py  users_client.py
src/valve/core/resources/: access.py  config.py  connector.py  connectors.py  pipeline.py  pipelines.py  tables.py  teams.py  users.py
src/valve/subcommands/: connector.py  connectors.py  pipelines.py  teams.py  users.py
src/valve/utils/: logger.py  printer.py  templates.py
tests/: test_simple.py
