[project]
name = "valve"
version = "0.2.0"
description = "A CLI interface to databasin, an api to administer a databricks data lake"
authors = [
    {name = "ITLackey", email = "itlackey@gmail.com"},
    {name = "indraniel",email = "indraniel@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: ISC License",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "click==8.1.7",
    "clint==0.5.1",
    "inquirer==3.1.3",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "tomli==2.0.1",
    "tabulate==0.9.0",
    "rich==13.6.0"
]

# [optional-dependencies]
# test = [
#     "pytest==7.4.2"
# ]

[build-system]
requires = ["setuptools >= 61.0.0", "wheel >= 0.41.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
valve = "valve.cli:cli"
